# winrtqrabber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  demo.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
winrtqrabber/: __init__.py  controller.py  view.py  winrtcapture.py
