[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "winrtqrabber"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/qrabber"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.7"
requires=["aio-wx-widgets","winrt","pyzbar","numpy"]
keywords=["wxpyton","winrt","webcam","scanner","qrcode","qr-code"]

[tool.flit.metadata.requires-extra]
test=["pytest","pytest-asyncio","pytest-mock"]
dev = ["pylint","nox","pytest-cov","coverage[toml]>=5.0.3","pre-commit"]
